# cel-rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
interpreter/: Cargo.toml
interpreter/src/: context.rs  function_registry.rs  functions.rs  json.rs  lib.rs  list_ends_with.cel  macros.rs  magic.rs  objects.rs  ser.rs  timestamp_milliseconds.cel
interpreter/src/operators/: add.rs  bool.rs  div.rs  eq.rs  mod.rs  mul.rs  pow.rs  rel.rs  rem.rs  sub.rs
interpreter/tests/: bare_scripts.rs  simple.rs
interpreter/tests/scripts/simple/: add.cel  add_list.cel  add_number_to_string.cel  add_string.cel  add_string_to_number.cel  all_list.cel  all_set.cel  all_tuple.cel  boolean_and.cel  boolean_compound.cel  boolean_not.cel  boolean_or.cel  boolean_xor.cel  datetime_to_string.cel  divide.cel  duration.cel  duration_add_m.cel  duration_eq_h.cel  duration_eq_m.cel  duration_eq_s.cel  duration_gt_s.cel  duration_lt_h.cel  duration_minus_m.cel  duration_to_string.cel  eq.cel  exponent.cel  filter_list.cel  filter_set.cel  filter_tuple.cel  gt.cel  gte.cel  hashtag_ends_with.cel  list.cel  list_contains.cel  list_exists.cel  list_index.cel  list_index_empty.cel  list_index_miss.cel  list_index_miss_many.cel  list_index_range.cel  (+84 more)
parser/: Cargo.toml
parser/src/: ast.rs  atoms.rs  cel.lalrpop  datetime.rs  duration.rs  error.rs  identifiers.rs  lexer.rs  lib.rs  markers.rs  numbers.rs  operators.rs  parse.rs  regex.rs  string.rs  units.rs
