[package]
name = "cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.9.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["compilers"]

[dependencies]
cel-parser = { path = "../parser", version = "0.8.0" }

nom = "7.1.3"

chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"], optional = true }
regex = { version = "1.10.5", optional = true }
serde = "1.0"
base64 = "0.22.1"
ulid = "1.1.3"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

thiserror = "1.0"
paste = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"

[[bench]]
name = "runtime"
harness = false

[features]
default = ["regex", "chrono"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]
