[package]
name = "cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.9.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["compilers"]

[dependencies]
cel-parser = { path = "../parser", version = "0.8.0" }
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"]}
regex = { version = "1.10.5"}
ulid = "1.1.3"
rust_decimal = { version="1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
thiserror = "1.0"
paste = "1.0"

[dev-dependencies]
rstest = "0.23.0"
