[package]
name = "cel-parser"
description = "A parser for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.8.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["parsing"]

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
chrono = { version = "0.4.38", default-features = true, features = ["serde"]}
regex = "1.4.2"
thiserror = "1.0.40"
ulid = "1.1.3"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
nom = "8.0.0-alpha2"
chumsky = { version = "1.0.0-alpha.7", features=["default", "regex", "pratt"]}
ariadne = "0.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.23.0"

[build-dependencies]
lalrpop = { version = "0.22.0", features = ["lexer"] }

[[bench]]
name = "runtime"
harness = false
